Ingress/sample-application-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dotnet-blog
  name: dotnet-blog
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-blog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dotnet-blog
    spec:
      containers:
      - name: dotnet
        image:  nashadabdulrahiman/dotnet-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      imagePullSecrets:
      - name: regcred
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnet-blog
  name: dotnet-blog
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: dotnet-blog
  sessionAffinity: None
---
