Ingress/ingress-dotnet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: dotnet-blog-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: a91abb603c3b640869ae82023ed1c2a8-818729457.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: dotnet-blog
            port:
              number: 80
        path: /
        pathType: Prefix
