Ingress/ingress-flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: flask-blog-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: a3d99601ca05d48858f04baefe61948b-548884121.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: flask-blog
            port:
              number: 8000
        path: /demo(/|$)(.*)
        pathType: Prefix
